# vizent

./: LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py
vizent/: background_image.py  glyph_shapes.py  vizent_plot.py
vizent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
