[metadata]

name = vizent
version = 1.0.1
author = Lucy McLaughlin
author_email = lucy.mclaughlin@newcastle.ac.uk
description = A library for creating scatterplots using visual entropy glyphs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luyc12/vizent
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6